--- a/environment.yaml
+++ b/environment.yaml
@@ -6,10 +6,12 @@ dependencies:
 - python=3.6.9
 - pip
 - pip: 
+    - matplotlib==3.1.3
     - tqdm==4.43.0
     - pandas==0.25.3
     - nanofilt==2.7.1
     - NanoPlot==1.29.1
+    - seaborn==0.10.1 
 - fastqc=0.11.5
 - multiqc=1.9
 - porechop=0.2.4
