--- a/environment.yaml
+++ b/environment.yaml
@@ -2,6 +2,7 @@ name: metaNanoPype
 channels: 
 - conda-forge
 - bioconda
+- r
 dependencies: 
 - python=3.6.9
 - pip
@@ -16,3 +17,7 @@ dependencies:
 - multiqc=1.9
 - porechop=0.2.4
 - kraken2=2.1.1
+- r-base=4.0.3
+- r-rmarkdown=2.7
+- bioconductor-phyloseq=1.34.0
+- r-dt=0.18
